# blackjack-una

./: README.md  meson.build
blackjack/: meson.build
blackjack/src/: source.cpp
subprojects/: terminalpp.wrap
test/: meson.build
